v58.0/objects/Color_BO58__b.object
<CustomObject>
   <fields>
      <fullName>Name__c</fullName>
      <label>Name</label>
      <length>12</length>
      <required>true</required>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>Account__c</fullName>
      <label>Account</label>
      <referenceTo>Account</referenceTo>
      <relationshipLabel>Color BO58s</relationshipLabel>
      <relationshipName>Color_BO58s</relationshipName>
      <type>Lookup</type>
   </fields>
   <fields>
      <fullName>Person_Contact__c</fullName>
      <label>Person Contact</label>
      <type>Phone</type>
   </fields>
   <indexes>
      <fullName>Sr_No</fullName>
      <fields>
         <name>Name__c</name>
         <sortDirection>ASC</sortDirection>
      </fields>
      <label>Sr No</label>
   </indexes>
   <label>Color BO58</label>
   <pluralLabel>Color BO58s</pluralLabel>
</CustomObject>